# SyGus

./: CMakeLists.txt  my_build.sh
basic/: config.cpp
sygus/parser/: parser.cpp
sygus/parser/python/: main.py
tasks/: task_enumeration.cpp
